--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,44 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Acceso Denegado</title>
+        <title>Google Sing-in</title>
     </head>
     <body>
-        <h1>Acceso Denegado</h1>
+        <h1>Google Sing-in</h1>
+        <hr />
+
+        <div
+            id="g_id_onload"
+            data-client_id="442712775909-5i7nlqpi90cqpnokd4es51pfh2r741ad.apps.googleusercontent.com"
+            data-callback="handleCredentialResponse"
+            data-auto_prompt="false"
+        ></div>
+        <div
+            class="g_id_signin"
+            data-type="standard"
+            data-size="large"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-shape="rectangular"
+            data-logo_alignment="left"
+        ></div>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script>
+            function handleCredentialResponse(response) {
+                const options = {
+                    url: 'http://localhost:8080/api/auth/google',
+                    method: 'POST',
+                    headers: {
+                        Accept: 'application/json',
+                        'Content-Type': 'application/json;charset=UTF-8',
+                    },
+                    data: {
+                        id_token: response.credential,
+                    },
+                };
+                axios(options).then((res) => console.log(res.data));
+            }
+        </script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
     </body>
 </html>
